samples/_failures_safe/1761356333_3a06b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d797049b.c: In function ‘tokenize’:
./samples/SAFE/__tmp_d797049b.c:171:9: error: expected declaration or statement at end of input
  171 |         column = tokens[token_count].column;
      |         ^~~~~~
./samples/SAFE/__tmp_d797049b.c:171:9: error: expected declaration or statement at end of input
